# WhisperKey

./: .gitignore  LICENSE  PERF.md  Plan.md  README.md  TODO.md  gradle.properties  gradlew  settings.gradle.kts
.claude/: settings.local.json
Android/: Build.ps1  PERF.md  Plan.md  TODO.md  build.gradle.kts  gradlew.bat
Android/app/: build.gradle.kts  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  jni.c
Android/app/src/main/java/com/whisperkey/: AudioRecorder.kt  ModelManager.kt  SettingsActivity.kt  UpdateManager.kt  WhisperEngine.kt  WhisperKeyboardService.kt  WhisperRecognitionService.kt
Android/app/src/main/java/com/whisperkey/ui/: KeyboardProfile.kt  QwertyKeyboardView.kt  VoiceInputView.kt
Android/app/src/main/java/com/whisperkey/util/: Logger.kt
Android/app/src/main/res/drawable/: ic_backspace.xml  ic_close.xml  ic_mic.xml  ic_settings.xml  record_button_background.xml  utility_button_background.xml
Android/app/src/main/res/layout/: item_emoji_hotkey.xml  numeric_keyboard_view.xml
Android/app/src/main/res/values/: default_emojis.xml  ids.xml  strings.xml
Android/app/src/main/res/xml/: preferences.xml  recognition_service.xml
Windows/: Build.ps1  PARAKEET_PLAN.md  PLAN.md  WhisperKey.sln
Windows/WhisperKey/: Program.cs  WhisperKey.csproj
Windows/WhisperKey/App/: HotkeyConflictDialog.cs  HotkeyManager.cs  HotkeyPickerDialog.cs  Logger.cs  TrayApplication.cs  UpdateChecker.cs  WindowsHotkeyOverride.cs
Windows/WhisperKey/Audio/: AudioRecorder.cs
Windows/WhisperKey/Input/: InputSender.cs  TextInjector.cs
Windows/WhisperKey/Settings/: AppSettings.cs  SettingsForm.cs  SettingsManager.cs
Windows/WhisperKey/Transcription/: ITranscriber.cs  ModelDescriptor.cs  ModelManager.cs  ParakeetTranscriber.cs  TranscriberFactory.cs  TranscriptionEngine.cs  WhisperRuntimeSetup.cs  WhisperTranscriber.cs
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c
app/src/main/java/com/whisperkey/: EmojiManager.kt  ModelManager.kt  SettingsActivity.kt  WhisperEngine.kt  WhisperKeyboardService.kt  WhisperRecognitionService.kt
app/src/main/java/com/whisperkey/ui/: EmojiPickerDialog.kt  NumericKeyboardView.kt  QwertyKeyboardView.kt  VoiceInputView.kt
app/src/main/java/com/whisperkey/util/: StorageHelper.kt
app/src/main/res/drawable/: ic_edit.xml  keyboard_key_background.xml  mic_button_background.xml
app/src/main/res/layout/: dialog_edit_emoji.xml  dialog_emoji_picker.xml  item_emoji_hotkey.xml  numeric_keyboard_view.xml  voice_input_view.xml
app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: method.xml  preferences.xml
